--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,38 @@
 body {
   margin: 0;
 }
+
+.header {
+  text-align: center;
+}
+
+
+
+.center{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.header-img {
+  width: 100%;
+  height: auto;
+}
+
+.nav-links {
+  display:flex;
+  justify-content: center;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+.nav-links a {
+  text-decoration: none;
+  color: #000;
+  font-size: 1.2rem;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+.nav-links a:hover {
+  text-decoration-color: blue;
+}
