--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,6 @@ body {
   text-align: center;
 }
 
-
-
 .center{
   display: flex;
   flex-direction: column;
@@ -22,17 +20,18 @@ body {
 .nav-links {
   display:flex;
   justify-content: center;
-  gap: 1rem;
+  gap: 2rem;
   margin-top: 1rem;
 }
 
 .nav-links a {
   text-decoration: none;
-  color: #000;
-  font-size: 1.2rem;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  color: blue;
+  font-size: 1rem;
+  font-family:Arial, Helvetica, sans-serif;
+  font-weight: 200;
 }
 
 .nav-links a:hover {
-  text-decoration-color: blue;
+  color: rgb(193, 135, 2);
 }
