--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -1,4 +1,18 @@
 .title {
-  font-size: 4rem;
-  color: blue;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.5rem;
+  font-weight:bolder;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  margin-top: 5rem;
+}
+
+.text {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+  font-weight: 200;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  margin-top: 2rem;
+  padding-inline: 5rem;
 }
