--- a/src/styles/contact.module.css
+++ b/src/styles/contact.module.css
@@ -1,4 +1,29 @@
 .title {
-  font-size: 4rem;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.5rem;
+  font-weight:bolder;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  margin-top: 5rem;
+}
+
+.contactLinks {
+  display:flex;
+  flex-direction: column;
+  gap: 2rem;
+  margin-top: 1rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.contactLinks a {
+  text-decoration: none;
   color: blue;
+  font-size: 1rem;
+  font-family:Arial, Helvetica, sans-serif;
+  font-weight: 200;
+}
+
+.contactLinks a:hover {
+  color: rgb(193, 135, 2);
 }
