--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -1,4 +1,12 @@
 .title {
-  font-size: 4rem;
-  color: blue;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.5rem;
+  font-weight:bolder;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  margin-top: 5rem;
+}
+
+.project {
+display: flex;
 }
