--- a/src/styles/project.module.css
+++ b/src/styles/project.module.css
@@ -1,4 +1,65 @@
-.title {
-  font-size: 4rem;
-  color: blue;
+.projectContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.project {
+  margin: 0 10px;
+}
+
+.cardLink {
+  text-decoration: none;
+  color: inherit;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+
+.imageContainer {
+  position: relative;
+  width: 300px;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  padding: 1rem;
+} 
+
+
+.projectImg {
+  width: 100%;
+  height: auto;
+  transition: transform 0.3s ease;
+}
+
+.imageContainer:hover .projectImg {
+    filter: brightness(50%);
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.2s ease;
+  background-color: rgb(255, 181, 45);
+}
+
+.imageContainer:hover .overlay {
+  opacity: 0.8;
+}
+
+.overlayText {
+  color: rgb(255, 255, 255);
+  font-size: 1.5rem;
+  text-align: center;
+  font-family:'Courier New', Courier, monospace;
+  font-weight: 700;
+  padding: 1rem;
 }
